<resources>
    <string name="app_name">Cardatrônico - Empresa</string>
    <string name="bemvindo">Bem-vindo ao painel de controle do Cardatrônico</string>
    <string name="email">Digite seu e-mail</string>
    <string name="password">Digite sua senha</string>
    <string name="login">Entrar</string>
    <string name="singup">Cadastre-se</string>
    <string name="empresa">Digite nome da sua empresa</string>
    <string name="messageLoginNeedData">Preencha todos os dados!</string>
    <string name="messageSignupNeddData">Preencha todos os dados!</string>
    <string name="errorEmailSignup">Digite uma senha mais forte.</string>
    <string name="errorEmailSignupInValid">Por favor, digite um email válido.</string>
    <string name="errorAcountCreated">Esta conta já foi cadastrada.</string>
    <string name="accountCreated">Cadastro realizado com sucesso!!</string>
    <string name="loginSuccessful">Login realizado com sucesso!!</string>
    <string name="telefone">Digite o seu telefone de contato da empresa</string>
    <string name="tipoCozinha">Digite o tipo de cozinha do seu restaurante</string>
    <string name="estado">Digite o estado do seu restaurante</string>
    <string name="cidade">Digite a cidade do seu restaurante</string>
    <string name="bairro">Digite o bairro do seu restaurante</string>
    <string name="complemento">Digite o complemento do seu local do restaurante</string>
    <string name="cep">Digite o cep do seu restaurante</string>
    <string name="infoCompany">Informações da empresa</string>
    <string name="infoUser">Informações do usuário</string>
    <string name="controlPanel">Painel de controle</string>
    <string name="addCardapio">Cardápio</string>
    <string name="navigationPerson">Perfil</string>
    <string name="navigationSettings">Configurações</string>
    <string name="navigationHome">Início</string>
    <string name="cadastrarItemCardapio">Adicionar produtos ao cardápio</string>
    <string name="addCategory">Adicionar categoria</string>
    <string name="nameProduct">Nome do produto</string>
    <string name="priceProduct">Preço do produto</string>
    <string name="descriptionProduct">Descrição do produto</string>
    <string name="selectimage">Abrir galeria</string>
    <string name="openCamera">Abrir camêra</string>
    <string name="cadastrarProduto">Cadastrar produto</string>
    <string name="disccount">Digite o percentual de desconto</string>
    <string name="warningCategory">**Selecione apenas uma categoria de produto, caso não tenha a desejada clique no botão abaixo.</string>
    <string name="nameCategory">Nome da categoria</string>
    <string name="cadastrarCategoria">Cadastrar categoria</string>
    <string name="updateText">Atualizar</string>
    <string name="failedSignup">Não é possível cadastrar novos restaurantes.</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="send">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
