<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_constrainedHeight="true"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".activity.SingupActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextCidade"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/cidade"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextBairro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEstado"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextNomeEmpresa"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/empresa"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTipoCozinha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextTelefoneEmpresa"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextComplemento"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextTipoCozinha"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/tipoCozinha"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextCep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeEmpresa"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextEstado"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/estado"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextCidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCep"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextComplemento"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/complemento"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTelefoneEmpresa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBairro"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextCep"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/cep"
            android:inputType="number"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEstado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTipoCozinha"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextBairro"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/bairro"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextComplemento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCidade"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sfpdb"
            android:text="@string/infoUser"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefoneEmpresa"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/sfpdb"
            android:text="@string/infoCompany"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNomeEmpresa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.219"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextPasswordSignup"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignup"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:backgroundTint="@color/colorSplash"
            android:stateListAnimator="@null"
            android:text="@string/singup"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignup"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextEmailSignup"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>