<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/sfpdb"
        android:text="@string/bemvindo"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:chainUseRtl="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_arrounded"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:chainUseRtl="false"
        app:layout_constraintBottom_toTopOf="@+id/editTextPaswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_arrounded"
        android:backgroundTint="@color/colorSplash"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:chainUseRtl="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPaswordLogin"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_arrounded"
        android:backgroundTint="@android:color/black"
        android:stateListAnimator="@null"
        android:text="@string/singup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:chainUseRtl="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextPaswordLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_arrounded"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:chainUseRtl="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>