<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@android:color/white"
        tools:context=".fragment.AddCardapioFragment">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/warningCategory"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonOpenCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            app:layout_constraintVertical_chainStyle="packed" />

        <android.widget.Button
            android:id="@+id/buttonTest"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_arrounded"
            android:backgroundTint="@color/colorSplash"
            android:text="@string/cadastrarProduto"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOpenCamera"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/sfpdb"
            android:text="@string/cadastrarItemCardapio"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintVertical_chainStyle="packed" />

        <android.widget.Button
            android:id="@+id/buttonOpenCategory"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:backgroundTint="@android:color/black"
            android:text="@string/addCategory"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNameProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextNameProduct"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/nameProduct"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextDescriptionProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOpenCategory"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextPriceProduct"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/priceProduct"
            android:inputType="number|numberDecimal"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextDisccountProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionProduct"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextDescriptionProduct"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/descriptionProduct"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPriceProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameProduct"
            app:layout_constraintVertical_chainStyle="packed" />

        <android.widget.Button
            android:id="@+id/buttonOpenCamera"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:backgroundTint="@android:color/black"
            android:text="@string/openCamera"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOpenGallery"
            app:layout_constraintVertical_chainStyle="packed" />

        <android.widget.Button
            android:id="@+id/buttonOpenGallery"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:backgroundTint="@android:color/black"
            android:text="@string/selectimage"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/buttonOpenCamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDisccountProduct"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editTextDisccountProduct"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_arrounded"
            android:ems="10"
            android:hint="@string/disccount"
            android:inputType="number|numberDecimal"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonOpenGallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPriceProduct"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>